# dto/service.go
@@ -6,17 +6,6 @@ import (
 	"time"
 )
 
-// 搜索框查找信息参数
-type ServiceListInput struct {
-	Info     string `json:"info" form:"info" comment:"查找信息" validate:""`
-	PageSize int    `json:"page_size" form:"page_size" comment:"页数" validate:"required,min=1,max=999"`
-	PageNo   int    `json:"page_no" form:"page_no" comment:"页码" validate:"required,min=1,max=999"`
-}
-
-func (params *ServiceListInput) GetValidParams(c *gin.Context) error {
-	return public.DefaultGetValidParams(c, params)
-}
-
 // 具体信息展示
 type ServiceListItemOutput struct {
 	ID          int64     `json:"id" gorm:"primary_key"`
@@ -30,3 +19,29 @@ type ServiceListItemOutput struct {
 	QPD         int64     `json:"qpd" description:"每天请求数"`
 	TotalNode   int       `json:"total_node" description:"总节点数"`
 }
+
+//---------------------------------------------------------------------------------------------------------------
+
+// 搜索框查找信息参数
+type ServiceListInput struct {
+	Info     string `json:"info" form:"info" comment:"查找信息" validate:""`
+	PageSize int    `json:"page_size" form:"page_size" comment:"页数" validate:"required,min=1,max=999"`
+	PageNo   int    `json:"page_no" form:"page_no" comment:"页码" validate:"required,min=1,max=999"`
+}
+
+func (params *ServiceListInput) GetValidParams(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, params)
+}
+
+//---------------------------------------------------------------------------------------------------------------
+
+// 删除信息根据ID
+type ServiceDetailInput struct {
+	ID int64 `json:"id" form:"id" comment:"服务ID" validate:"required"`
+}
+
+func (params *ServiceDetailInput) GetValidParams(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, params)
+}
+
+//---------------------------------------------------------------------------------------------------------------
